<resources>
    <string name="app_name">Redhat Ambulance</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_contact">Contacts</string>
    <string name="nav_hospitals">Hospitals</string>
    <string name="nav_medical">Medical Records</string>
    <string name="nav_assist">Assist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
