<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/baseline_dashboard_24"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/baseline_call_white_24"
        android:title="@string/nav_contact" />
    <item
        android:id="@+id/nav_hospital"
        android:icon="@drawable/baseline_business_24"
        android:title="@string/nav_hospitals" />
    <item
        android:id="@+id/nav_medical"
        android:icon="@drawable/baseline_favorite_white_24"
        android:title="@string/nav_medical" />
    <item
        android:id="@+id/nav_assist"
        android:icon="@drawable/baseline_notification_important_white_24"
        android:title="@string/nav_assist" />
</menu>